Modify global logic.

--- a/Forum.Web/Views/Shared/_Layout.cshtml
+++ b/Forum.Web/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
         </div>
         <hr>
         <footer class="text-center">
-            <p>Powered by enode framework.</p>
+            <p>Powered by ENode Framework.</p>
         </footer>
     </div>
 
