--- a/Forum.Web/Views/Shared/_Layout.cshtml
+++ b/Forum.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="zh">
+<html lang="zh" id="forum" ng-app>
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -56,6 +56,7 @@
     </div>
     @Scripts.Render("~/content/jquery")
     @Scripts.Render("~/content/bootstrap/js")
+    @Scripts.Render("~/content/angularjs")
     @RenderSection("Scripts", required: false)
 </body>
 </html>
