refactory the aggregate root id generation implementation.

--- a/Forum.Web/Views/Account/Login.cshtml
+++ b/Forum.Web/Views/Account/Login.cshtml
@@ -9,9 +9,9 @@
         <legend>账号登陆</legend>
         <ol>
             <li>
-                @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName)
-                @Html.ValidationMessageFor(m => m.UserName)
+                @Html.LabelFor(m => m.AccountName)
+                @Html.TextBoxFor(m => m.AccountName)
+                @Html.ValidationMessageFor(m => m.AccountName)
             </li>
             <li>
                 @Html.LabelFor(m => m.Password)
