--- a/Forum.Web/Views/Account/Register.cshtml
+++ b/Forum.Web/Views/Account/Register.cshtml
@@ -9,8 +9,8 @@
         <legend>注册新帐户</legend>
         <ol>
             <li>
-                @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName)
+                @Html.LabelFor(m => m.AccountName)
+                @Html.TextBoxFor(m => m.AccountName)
             </li>
             <li>
                 @Html.LabelFor(m => m.Password)
