--- a/Forum.Web/Views/Shared/_Layout.cshtml
+++ b/Forum.Web/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
         <div class="col-lg-12">
             <hr>
             <footer class="text-center">
-                <p>Powered by netfocus.</p>
+                <p>Developed by netfocus.</p>
             </footer>
         </div>
     </div>
