--- a/Forum.Web/Views/Post/Index.cshtml
+++ b/Forum.Web/Views/Post/Index.cshtml
@@ -59,26 +59,29 @@
                     <h4 class="modal-title">发表帖子</h4>
                 </div>
                 <div class="modal-body">
-                    <form class="form-horizontal form-tc" action="" method="post">
-                        <div class="control-group">
-                            <label class="control-label">版块</label>
-                            <div class="controls">
-                                <select class="input span3" ng-model="newPost.sectionId" ng-options="section.Id as section.Name for section in sections"><option value="">-- 选择版块 --</option></select>
-                                <label class="star">*</label>
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label for="sectionId" class="col-sm-2 control-label">版块</label>
+                            <div class="col-sm-6">
+                                <select id="sectionId" class="form-control" ng-model="newPost.sectionId" ng-options="section.Id as section.Name for section in sections"><option value="">-- 选择版块 --</option></select>
                             </div>
                         </div>
-                        <div class="control-group">
-                            <label class="control-label">标题</label>
-                            <div class="controls">
-                                <input type="text" maxlength="256" class="input span5" ng-model="newPost.subject" />
-                                <label class="star">*</label>
+                        <div class="form-group">
+                            <label for="subject" class="col-sm-2 control-label">标题</label>
+                            <div class="col-sm-9">
+                                <input type="text" id="subject" class="form-control" ng-model="newPost.subject" />
                             </div>
                         </div>
-                        <div class="control-group">
-                            <label class="control-label">内容</label>
-                            <div class="controls">
-                                <textarea maxlength="2000" class="input span5" ng-model="newPost.body" rows="5"></textarea>
-                                <label class="star">*</label>
+                        <div class="form-group">
+                            <label for="body" class="col-sm-2 control-label">内容</label>
+                            <div class="col-sm-9">
+                                <textarea id="body" class="form-control" ng-model="newPost.body" maxlength="2000" rows="5"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label"></label>
+                            <div class="col-sm-9">
+                                <span class="error" ng-show="errorMsg != ''">{{errorMsg}}</span>
                             </div>
                         </div>
                     </form>
