--- a/Forum.Web/Views/Account/Register.cshtml
+++ b/Forum.Web/Views/Account/Register.cshtml
@@ -1,31 +1,49 @@
 ﻿@model Forum.Web.Models.RegisterModel
 @{
-    ViewBag.Title = "注册";
+    ViewBag.Title = "新用户注册";
+    Layout = "~/Views/Shared/_SimpleLayout.cshtml";
 }
 
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    <fieldset>
-        <legend>注册新帐户</legend>
-        <ol>
-            <li>
-                @Html.LabelFor(m => m.AccountName)
-                @Html.TextBoxFor(m => m.AccountName)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword)
-            </li>
-        </ol>
-        <button type="submit" class="btn">注册</button>
-        @Html.ValidationSummary()
-    </fieldset>
-}
+<center>
+    <div class="register_wrapper" ng-controller="RegisterController">
+        <form class="form-horizontal" role="form">
+            <fieldset>
+                <legend>新用户注册</legend>
+                <div class="form-group">
+                    <label for="accountName" class="col-sm-2 control-label">用户名</label>
+                    <div class="col-sm-6">
+                        <input type="text" id="accountName" class="form-control" ng-model="newAccount.accountName" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-sm-2 control-label">密码</label>
+                    <div class="col-sm-6">
+                        <input type="password" id="password" class="form-control" ng-model="newAccount.password" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-sm-2 control-label">密码确认</label>
+                    <div class="col-sm-6">
+                        <input type="password" id="confirmPassword" class="form-control" ng-model="newAccount.confirmPassword" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label"></label>
+                    <div class="col-sm-6">
+                        <span class="error" ng-show="errorMsg != ''">{{errorMsg}}</span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label"></label>
+                    <div class="col-sm-6">
+                        <button type="button" class="btn btn-primary" ng-click="submit()">提交</button>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
+</center>
 
 @section Scripts {
-    @Scripts.Render("~/content/jquery")
+    <script type="text/javascript" src="@Url.Content("~/content/controllers/register-controller.js")"></script>
 }
