--- a/Forum.Web/Views/Post/Index.cshtml
+++ b/Forum.Web/Views/Post/Index.cshtml
@@ -1,27 +1,27 @@
 ﻿@model IEnumerable<Forum.Web.Models.PostListModel>
 @{
-    ViewBag.Title = "帖子列表";
+    ViewBag.Title = "ENode论坛-帖子列表";
 }
 <div ng-controller="PostController">
     <table class="table table-striped">
         <thead>
             <tr>
-                <th width="44%" class="vertical-center">
+                <th width="52%" class="vertical-center">
                     标题
                 </th>
-                <th width="12%" class="text-center vertical-center">
+                <th width="10%" class="text-center vertical-center">
                     发帖人
                 </th>
-                <th width="12%" class="text-center vertical-center">
+                <th width="10%" class="text-center vertical-center">
                     发帖时间
                 </th>
                 <th width="8%" class="text-center vertical-center">
                     回复数
                 </th>
-                <th width="12%" class="text-center vertical-center">
+                <th width="10%" class="text-center vertical-center">
                     回复人
                 </th>
-                <th width="12%" class="text-center vertical-center">
+                <th width="10%" class="text-center vertical-center">
                     回复时间
                 </th>
             </tr>
