--- a/Forum.Web/Views/Shared/_SimpleLayout.cshtml
+++ b/Forum.Web/Views/Shared/_SimpleLayout.cshtml
@@ -14,7 +14,7 @@
         <div class="site-header">
             <div class="collapse navbar-collapse navbar-left">
                 <a class="site-brand" href="/"></a>
-                <div class="site-name">ENode Forum</div>
+                <a class="site-name" href="/">ENode Forum</a>
             </div>
             <div class="collapse navbar-collapse">
                 @Html.Partial("_LoginPartial")
