alter page title.

--- a/Forum.Web/Views/Account/Register.cshtml
+++ b/Forum.Web/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Forum.Web.Models.RegisterModel
 @{
-    ViewBag.Title = "新用户注册";
+    ViewBag.Title = "ENode论坛-新用户注册";
     Layout = "~/Views/Shared/_SimpleLayout.cshtml";
 }
 
