--- a/Forum.Web/Views/Shared/Error.cshtml
+++ b/Forum.Web/Views/Shared/Error.cshtml
@@ -1,7 +1,7 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "错误";
+    ViewBag.Title = "ENode论坛-错误页面";
 }
 
 <hgroup class="title">
