--- a/Forum.Web/Views/Account/Login.cshtml
+++ b/Forum.Web/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Forum.Web.Models.LoginModel
 @{
-    ViewBag.Title = "用户登录";
+    ViewBag.Title = "ENode论坛-用户登录";
     Layout = "~/Views/Shared/_SimpleLayout.cshtml";
 }
 
