--- a/Forum.Web/Views/Shared/TimeoutError.cshtml
+++ b/Forum.Web/Views/Shared/TimeoutError.cshtml
@@ -1,9 +1,9 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "提醒";
+    ViewBag.Title = "ENode论坛-请求处理超时提醒页面";
 }
 
 <hgroup class="title">
-    <h2 class="error">请求处理超时。</h2>
+    <h2 class="error">您好，您的当前请求处理超时，请稍后查看是否处理完成。</h2>
 </hgroup>
