--- a/Forum.Web/Views/Post/Detail.cshtml
+++ b/Forum.Web/Views/Post/Detail.cshtml
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="post-item-body">
-            @Model.Subject
+            @Model.Body
         </div>
     </div>
     @foreach (var reply in Model.Replies)
