--- a/Forum.Web/Views/Post/Detail.cshtml
+++ b/Forum.Web/Views/Post/Detail.cshtml
@@ -17,6 +17,10 @@
                 }
             </div>
             <div class="pull-right">
+                @if (Model.AuthorId == ViewBag.CurrentAccountId)
+                {
+                    <a href="#" ng-click="showEditPostDialog()" style="margin-left:5px">编辑</a>
+                }
                 <a href="#" ng-click="showNewReplyDialog()">回复</a>
             </div>
         </div>
@@ -32,12 +36,12 @@
                     <span>#@reply.Floor@Html.Raw("楼")</span>
                     @if (@reply.AuthorId == Model.AuthorId)
                     {
-                        <span>[楼主]</span>
+                    <span>[楼主]</span>
                     }
                     <span style="margin-left:5px; margin-right:5px">@reply.CreatedOn</span>
                     @if (!string.IsNullOrEmpty(reply.AuthorName))
                     {
-                        @Html.ActionLink(reply.AuthorName, "index", new { authorId = reply.AuthorId }, new { target = "_blank" })
+                    @Html.ActionLink(reply.AuthorName, "index", new { authorId = reply.AuthorId }, new { target = "_blank" })
                     }
                 </div>
                 <div class="pull-right">
@@ -81,11 +85,48 @@
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+    <div class="modal fade" id="float-box-editingPost">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">编辑帖子</h4>
+                </div>
+                <div class="modal-body">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label for="subject" class="col-sm-2 control-label">标题</label>
+                            <div class="col-sm-9">
+                                <input type="text" id="subject" class="form-control" ng-model="editingPost.subject" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="body" class="col-sm-2 control-label">内容</label>
+                            <div class="col-sm-9">
+                                <textarea id="body" class="form-control" ng-model="editingPost.body" maxlength="2000" rows="5"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label"></label>
+                            <div class="col-sm-9">
+                                <span class="error" ng-show="errorMsg != ''">{{errorMsg}}</span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" ng-click="updatePost()">提交</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 </div>
 
 @section Scripts {
     <script type="text/javascript">
-        var postId = '@ViewBag.PostId';
+        var postId = '@Model.Id';
+        var postAuthorId = '@Model.AuthorId';
     </script>
     <script type="text/javascript" src="@Url.Content("~/content/controllers/post-detail-controller.js")"></script>
 }
