增加修改回复的功能

--- a/Forum.Web/Views/Home/Index.cshtml
+++ b/Forum.Web/Views/Home/Index.cshtml
@@ -24,17 +24,17 @@
     </ul>
 
     <h4>
-        Blog
+        Author's blog
     </h4>
     <p>
         <a href="http://www.cnblogs.com/netfocus/category/496012.html">http://www.cnblogs.com/netfocus/category/496012.html</a>
     </p>
 
     <h4>
-        Saga sample
+        ENode project url
     </h4>
     <p>
-        <a href="https://github.com/tangxuehua/BankTransferSample">https://github.com/tangxuehua/BankTransferSample</a>
+        <a href="https://github.com/tangxuehua/enode">https://github.com/tangxuehua/enode</a>
     </p>
 
     <h4>
