--- a/Forum.Web/Views/Post/Detail.cshtml
+++ b/Forum.Web/Views/Post/Detail.cshtml
@@ -45,6 +45,10 @@
                     }
                 </div>
                 <div class="pull-right">
+                    @if (reply.AuthorId == ViewBag.CurrentAccountId)
+                    {
+                        <a href="#" ng-click="showEditReplyDialog('@reply.Id')" style="margin-left:5px">编辑</a>
+                    }
                     <a href="#" ng-click="showNewSubReplyDialog('@reply.Id')">回复</a>
                 </div>
             </div>
@@ -55,6 +59,42 @@
     }
 
     <button class="btn btn-primary btn-lg" data-toggle="modal" ng-click="showNewReplyDialog()">发表回复</button>
+    <div class="modal fade" id="float-box-editingPost">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">编辑帖子</h4>
+                </div>
+                <div class="modal-body">
+                    <form class="form-horizontal" role="form">
+                        <div class="form-group">
+                            <label for="editingPost_subject" class="col-sm-2 control-label">标题</label>
+                            <div class="col-sm-9">
+                                <input type="text" id="editingPost_subject" class="form-control" ng-model="editingPost.subject" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="editingPost_body" class="col-sm-2 control-label">内容</label>
+                            <div class="col-sm-9">
+                                <textarea id="editingPost_body" class="form-control" ng-model="editingPost.body" maxlength="2000" rows="5"></textarea>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-2 control-label"></label>
+                            <div class="col-sm-9">
+                                <span class="error" ng-show="errorMsg != ''">{{errorMsg}}</span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" ng-click="updatePost()">提交</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
     <div class="modal fade" id="float-box-newReply">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -65,9 +105,9 @@
                 <div class="modal-body">
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
-                            <label for="sectionId" class="col-sm-2 control-label">内容</label>
+                            <label for="newReply_body" class="col-sm-2 control-label">内容</label>
                             <div class="col-sm-9">
-                                <textarea id="body" class="form-control" ng-model="newReply.body" maxlength="2000" rows="10"></textarea>
+                                <textarea id="newReply_body" class="form-control" ng-model="newReply.body" maxlength="2000" rows="10"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
@@ -85,25 +125,19 @@
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
-    <div class="modal fade" id="float-box-editingPost">
+    <div class="modal fade" id="float-box-editingReply">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">编辑帖子</h4>
+                    <h4 class="modal-title">编辑回复</h4>
                 </div>
                 <div class="modal-body">
                     <form class="form-horizontal" role="form">
                         <div class="form-group">
-                            <label for="subject" class="col-sm-2 control-label">标题</label>
+                            <label for="editingReply_body" class="col-sm-2 control-label">内容</label>
                             <div class="col-sm-9">
-                                <input type="text" id="subject" class="form-control" ng-model="editingPost.subject" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="body" class="col-sm-2 control-label">内容</label>
-                            <div class="col-sm-9">
-                                <textarea id="body" class="form-control" ng-model="editingPost.body" maxlength="2000" rows="5"></textarea>
+                                <textarea id="editingReply_body" class="form-control" ng-model="editingReply.body" maxlength="2000" rows="10"></textarea>
                             </div>
                         </div>
                         <div class="form-group">
@@ -115,7 +149,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" ng-click="updatePost()">提交</button>
+                    <button type="button" class="btn btn-primary" ng-click="updateReply()">提交</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
                 </div>
             </div><!-- /.modal-content -->
