add section admin.

--- a/Forum.Web/Views/Post/Detail.cshtml
+++ b/Forum.Web/Views/Post/Detail.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Forum.Web.Models.PostDetailModel
 @{
     ViewBag.Title = "ENode论坛-帖子详情";
+    Layout = "~/Views/Shared/_SimpleLayout.cshtml";
 }
 <div ng-controller="PostDetailController">
     <div>
