--- a/Forum.Web/Views/Shared/Error.cshtml
+++ b/Forum.Web/Views/Shared/Error.cshtml
@@ -5,6 +5,6 @@
 }
 
 <hgroup class="title">
-    <h1 class="error">错误。</h1>
-    <h2 class="error">在处理你的请求时出错。</h2>
+    <h1 class="error">非常抱歉！</h1>
+    <h2 class="error">服务器在处理你的请求时出错。</h2>
 </hgroup>
