统一将用户改为账号

--- a/Forum.Web/Views/Account/Register.cshtml
+++ b/Forum.Web/Views/Account/Register.cshtml
@@ -10,7 +10,7 @@
             <fieldset>
                 <legend>新用户注册</legend>
                 <div class="form-group">
-                    <label for="accountName" class="col-sm-2 control-label">用户名</label>
+                    <label for="accountName" class="col-sm-2 control-label">账号</label>
                     <div class="col-sm-6">
                         <input type="text" id="accountName" class="form-control" ng-model="newAccount.accountName" />
                     </div>
