--- a/Forum.Web/Content/css/site.css
+++ b/Forum.Web/Content/css/site.css
@@ -36,7 +36,7 @@
     width: 45px;
     height: 45px;
     display: block;
-    background-image: url(./images/logo.png);
+    background-image: url(images/logo.png);
     background-repeat: no-repeat;
 }
 
