--- a/Forum.Web/Views/Shared/_Layout.cshtml
+++ b/Forum.Web/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
             @{Html.RenderAction("Index", "Section");}
         </div>
         <div class="col-lg-10 content">
+            <div id="alert_placeholder"></div>
             @RenderBody()
         </div>
     </div>
