--- a/Forum.Web/Views/Shared/_SimpleLayout.cshtml
+++ b/Forum.Web/Views/Shared/_SimpleLayout.cshtml
@@ -23,6 +23,7 @@
     </nav>
     <div class="row" style="min-height:430px">
         <div class="col-lg-12">
+            <div id="alert_placeholder"></div>
             @RenderBody()
         </div>
     </div>
